[CR-15] Fix location finder spacing

--- a/themes/openy_themes/openy_carnation/src/scss/modules/_location.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_location.scss
@@ -75,6 +75,10 @@
     }
   }
 
+  .branch-info {
+    position: inherit;
+  }
+
   // button
   .button.branch-info a {
     @include cachet(700);
